# lightweight-mnist

./: .gitignore  README.md  pyproject.toml
.github/workflows/: model_tests.yml
outputs/metrics/: 20241129_073013_metrics.csv  20241129_073013_metrics.json  20241129_074321_metrics.csv  20241129_074352_metrics.json  20241129_090719_metrics.csv  20241129_090719_metrics.json  20241129_091134_metrics.csv  20241129_091134_metrics.json
requirements/: requirements-dev.txt  requirements.txt  requriements-test.txt
scripts/: train.py  visualise_augmentations.py
src/config/: config.py
src/data/: dataset.py  transforms.py
src/models/: mnist_cnn.py
src/training/: trainer.py  utils.py
tests/: conftest.py  test_dataset.py  test_model_requirements.py  test_trainer.py
