[project]
name = "lightweight-mnist"
version = "0.1.0"
description = "Lightweight MNIST classifier in PyTorch"
authors = [
    {name = "Rupesh"},
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.ruff]
select = ["E", "F", "B"]
ignore = []
line-length = 88
target-version = "py38"

[tool.mypy]
python_version = "3.8"
strict = true
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src/lightweight_mnist"]